# opensslAndroidLinking

./: .gitignore  README.md  local.properties
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  hello-jni.c
